@@ -908,6 +908,8 @@ extern char mods_folder[POP_MAX_PATH] INIT(= "mods");
 
 extern int play_demo_level;
 
+extern int g_deprecation_number;
+
 #undef INIT
 #undef extern
 
